Integrare teste si pregatire pt al doilea agent AI